// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todo Item page matches snapshot item being edited 1`] = `
<DocumentFragment>
  <div
    class="ToDoItem__container"
  >
    <input
      data-testid="todo-item-checkbox"
      type="checkbox"
    />
    <input
      class="ToDoItem__input"
      data-testid="todo-item-edit"
      value="content"
    />
    <button
      class="ToDoItem__delete"
      data-testid="todo-item-delete"
    >
      delete
    </button>
  </div>
</DocumentFragment>
`;

exports[`Todo Item page matches snapshot no edit item 1`] = `
<DocumentFragment>
  <div
    class="ToDoItem__container"
  >
    <input
      data-testid="todo-item-checkbox"
      type="checkbox"
    />
    <span
      class=""
      data-testid="todo-item-span"
    >
      content
    </span>
    <button
      class="ToDoItem__delete"
      data-testid="todo-item-delete"
    >
      delete
    </button>
  </div>
</DocumentFragment>
`;
